xv6/user/runtests.log
starting build

**********************************************************************

Test build
build project using make

**********************************************************************
rm -f xcheck
gcc xcheck.c -o xcheck -Wall -Werror -O
xcheck.c: In function ‘main’:
xcheck.c:76:6: error: implicit declaration of function ‘fstat’ [-Werror=implicit-function-declaration]
      fstat(fd, &sbuf);
      ^
xcheck.c:78:20: error: implicit declaration of function ‘mmap’ [-Werror=implicit-function-declaration]
      void *image = mmap(NULL, sbuf.st_size, PROT_READ, MAP_PRIVATE, fd, 0);
                    ^
xcheck.c:78:45: error: ‘PROT_READ’ undeclared (first use in this function)
      void *image = mmap(NULL, sbuf.st_size, PROT_READ, MAP_PRIVATE, fd, 0);
                                             ^
xcheck.c:78:45: note: each undeclared identifier is reported only once for each function it appears in
xcheck.c:78:56: error: ‘MAP_PRIVATE’ undeclared (first use in this function)
      void *image = mmap(NULL, sbuf.st_size, PROT_READ, MAP_PRIVATE, fd, 0);
                                                        ^
cc1: all warnings being treated as errors
Trying to clean project using make clean
make clean
make: *** No rule to make target 'clean'.  Stop.
Trying to build project using make
make
make: *** No targets specified and no makefile found.  Stop.


test build FAILED
 (build project using make)
 file 'cat.o' exists after make clean, removing
 file 'ulib.o' exists after make clean, removing
 file 'usys.o' exists after make clean, removing
 file 'printf.o' exists after make clean, removing
 file 'umalloc.o' exists after make clean, removing
 file 'echo.o' exists after make clean, removing
 file 'forktest.o' exists after make clean, removing
 file 'grep.o' exists after make clean, removing
 file 'init.o' exists after make clean, removing
 file 'kill.o' exists after make clean, removing
 file 'ln.o' exists after make clean, removing
 file 'ls.o' exists after make clean, removing
 file 'mkdir.o' exists after make clean, removing
 file 'rm.o' exists after make clean, removing
 file 'sh.o' exists after make clean, removing
 file 'stressfs.o' exists after make clean, removing
 file 'tester.o' exists after make clean, removing
 file 'usertests.o' exists after make clean, removing
 file 'wc.o' exists after make clean, removing
 file 'zombie.o' exists after make clean, removing
 make failed (error 2)
 required file 'xcheck' does not exist after make

Skipped 28 tests.
To keep testing after failing a test, use flag '-c' or '--continue'
